Se va implementando la API poco a poco

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <div class="information-set">
       <div class="information-container">
         <p class="information-title">IP ADDRESS</p>
-        <h2 id="information-id">info</h2>
+        <h2 class="information-api" id="information-id">info</h2>
       </div>
       <div class="information-container">
         <p class="information-title">LOCATION</p>
-        <h2 id="information-location">info</h2>
+        <h2 class="information-api" id="information-location">info</h2>
       </div>
       <div class="information-container">
         <p class="information-title">TIMEZONE</p>
-        <h2 id="information-timezone">info</h2>
+        <h2 class="information-api" id="information-timezone">info</h2>
       </div>
       <div class="information-container">
         <p class="information-title">ISP</p>
-        <h2 id="information-isp">info</h2>
+        <h2 class="information-api" id="information-isp">info</h2>
       </div>
     </div>
     
