Se implementa la Api, apikey, fetch y se esta configurando para poder mostrar toda la informacion de la forma correcta y mostrar el mapa

--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
       <div class="buscador-container">
         <h1 class="buscador-title">IP Address Tracker</h1>
         <div class="buscador-conjunto">
-          <input type="text" class="buscador">
-          <div class="buscador-btn">
+          <input 
+            type="text" 
+            class="buscador"
+            name="buscador"
+            id="buscador__id"
+            placeholder="Escribe la IP"
+            required
+            >
+
+          <button class="buscador-btn" id="buscador__btn__id">
             <img class="btn-arrow" src="/images/icon-arrow.svg"></img>
-          </div>
+          </button>
         </div>
         
       </div>
