--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         
       </div>
     </header>
-    
+
     <div class="information-set">
-      <div class="information-container">
+      <div class="information-container gray-line">
         <p class="information-title">IP ADDRESS</p>
         <h2 class="information-api" id="information-id">info</h2>
       </div>
-      <div class="information-container">
+      <div class="information-container gray-line">
         <p class="information-title">LOCATION</p>
         <h2 class="information-api" id="information-location">info</h2>
       </div>
-      <div class="information-container">
+      <div class="information-container gray-line">
         <p class="information-title">TIMEZONE</p>
         <h2 class="information-api" id="information-timezone">info</h2>
       </div>
